--- a/PerformanceTests/packages.config
+++ b/PerformanceTests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EasyAssertions" version="0.2.0" />
+  <package id="EasyAssertions" version="0.7.0.0" targetFramework="net35" />
   <package id="ServiceStack.Text" version="3.5.7" />
 </packages>
