--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Objects\Attributes\JsonNameAttributeTests.cs" />
     <Compile Include="Objects\DefaultPropertyDefinitionTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
+    <Compile Include="Objects\Output\DefaultObjectStructureTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderInterfaceTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
