--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Objects\Output\ObjectWriterTests.cs" />
     <Compile Include="Objects\PropertyDefinitionBuilderTests.cs" />
     <Compile Include="Objects\TypeDefinitionFactoryTests.cs" />
+    <Compile Include="Objects\TypeDefinitions\EnumDefinitionTests.cs" />
     <Compile Include="Output\SameReferenceTwice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTesting.cs" />
