--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -45,18 +45,21 @@
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EasyAssertions, Version=0.7.0.0, Culture=neutral, PublicKeyToken=439de676be7d1690, processorArchitecture=MSIL">
+    <Reference Include="EasyAssertions, Version=0.7.1.0, Culture=neutral, PublicKeyToken=439de676be7d1690, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EasyAssertions.0.7.0.0\lib\net35\EasyAssertions.dll</HintPath>
+      <HintPath>..\packages\EasyAssertions.0.7.1.0\lib\net35\EasyAssertions.dll</HintPath>
     </Reference>
-    <Reference Include="NSubstitute">
-      <HintPath>..\packages\NSubstitute.1.3.0.0\lib\NET35\NSubstitute.dll</HintPath>
+    <Reference Include="NSubstitute, Version=1.4.3.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NSubstitute.1.4.3.0\lib\NET35\NSubstitute.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="SmartFormat">
-      <HintPath>..\packages\EasyAssertions.0.7.0.0\lib\net35\SmartFormat.dll</HintPath>
+    <Reference Include="SmartFormat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=591bb943eec6993c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EasyAssertions.0.7.1.0\lib\net35\SmartFormat.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
