--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EasyAssertions" version="0.7.0.0" targetFramework="net35" />
-  <package id="NSubstitute" version="1.3.0.0" />
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="EasyAssertions" version="0.7.1.0" targetFramework="net35" />
+  <package id="NSubstitute" version="1.4.3.0" targetFramework="net35" />
+  <package id="NUnit" version="2.6.2" targetFramework="net35" />
 </packages>
