--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Objects\PropertyDefinitionBuilderTests.cs" />
     <Compile Include="Objects\TypeDefinitionFactoryTests.cs" />
     <Compile Include="Objects\TypeDefinitions\EnumDefinitionTests.cs" />
+    <Compile Include="Objects\TypeDefinitions\CollectionDefinitionTests.cs" />
     <Compile Include="Output\SameReferenceTwice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTesting.cs" />
